@@ -4,7 +4,8 @@ Changelog
 2.0.8 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add Portuguese normalizer.
+  [hvelarde]
 
 
 2.0.7 (2013-05-23)
